<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightbeige"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtQuiz"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/light"
            android:gravity="center"
            android:text="@string/Quizur"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnQuiz1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="90dp"
            android:backgroundTint="@color/brown"
            android:onClick="linkQuiz1"
            android:text="@string/Quiz1" />

        <Button
            android:id="@+id/btnQuiz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/brown"
            android:onClick="linkQuiz2"
            android:text="@string/Quiz2" />

        <Button
            android:id="@+id/btnQuiz3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:backgroundTint="@color/brown"
            android:onClick="linkQuiz3"
            android:text="@string/Quiz3" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:contentDescription="@string/Marca"
            app:srcCompat="@drawable/img" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>