<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/lightbeige"
    tools:context=".MainActivity7">

    <ImageView
        android:id="@+id/imgAnima5"
        android:layout_width="150dp"
        android:layout_height="95dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="79dp"
        android:contentDescription="@string/Anibtn2"
        app:layout_constraintEnd_toStartOf="@+id/imgAnima6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRisco"
        app:srcCompat="@drawable/arara_azul" />

    <TextView
        android:id="@+id/txtRisco"
        android:layout_width="415dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/beige"
        android:gravity="center_vertical"
        android:text="@string/titulo2"
        android:textAlignment="center"
        android:textColor="#455A64"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="55dp"
        android:text="@string/Aviso"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRisco" />

    <LinearLayout
        android:id="@+id/viewborder2"
        android:layout_width="415dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/beige"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>

    <Button
        android:id="@+id/btnSeguir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/black"
        android:onClick="linkMain1"
        android:text="@string/Home"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVoltar"
        app:layout_constraintTop_toBottomOf="@+id/btnAnima4"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:onClick="linkMain2"
        android:text="@string/btnlink4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnSeguir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnima3"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btnAnima4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/brown"
        android:onClick="linkMain9"
        android:text="@string/btnanima4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAnima3"
        app:layout_constraintTop_toBottomOf="@+id/imgAnima8"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btnAnima3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="@color/brown"
        android:onClick="linkMain9"
        android:text="@string/btnanima3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnAnima4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAnima7"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btnAnima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="122dp"
        android:backgroundTint="@color/brown"
        android:onClick="linkMain9"
        android:text="@string/bntanima1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnAnima2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAnima5"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btnAnima2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/brown"
        android:onClick="linkMain9"
        android:text="@string/btnanima2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAnima"
        app:layout_constraintTop_toBottomOf="@+id/imgAnima5"
        app:rippleColor="@color/white" />

    <ImageView
        android:id="@+id/imgAnima8"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="13dp"
        android:contentDescription="@string/Panda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAnima7"
        app:layout_constraintTop_toBottomOf="@+id/btnAnima2"
        app:srcCompat="@drawable/mico_le_o_dourado" />

    <ImageView
        android:id="@+id/imgAnima7"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/Aviso"
        app:layout_constraintEnd_toStartOf="@+id/imgAnima8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAnima5"
        app:srcCompat="@drawable/boto_cor_de_rosa" />

    <ImageView
        android:id="@+id/imgAnima6"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/Anibtn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgAnima5"
        app:layout_constraintTop_toBottomOf="@+id/txtRisco"
        app:srcCompat="@drawable/ararinha" />

</androidx.constraintlayout.widget.ConstraintLayout>