<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/lightbeige"
    android:contentDescription="@string/Anibtn4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtviewv1"
        android:layout_width="415dp"
        android:layout_height="70dp"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:autoText="false"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/beige"
        android:elevation="100dp"
        android:gravity="center_vertical"
        android:text="@string/titulo2"
        android:textAlignment="center"
        android:textColor="#455A64"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Deprecated,TextViewEdits" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/beige"
        android:contentDescription="@string/Oncapintada"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewv1"
        app:srcCompat="@drawable/oncapintada"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/LoboGuara"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtviewv1"
        app:srcCompat="@drawable/loboguara" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="47dp"
        android:contentDescription="@string/PandaGigante"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/panda" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/PingumAfricano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/pinguimafricano" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="69dp"
        android:backgroundTint="@color/brown"
        android:gravity="center_vertical"
        android:text="@string/Anibtn1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:onClick="linkMain8"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="69dp"
        android:backgroundTint="@color/brown"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Anibtn2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:onClick="linkMain8"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="@color/brown"
        android:gravity="center_vertical"
        android:text="@string/Anibtn3"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:onClick="linkMain8"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/brown"
        android:gravity="center_vertical"
        android:onClick="linkMain8"
        android:text="@string/Anibtn4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:rippleColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="178dp"
        android:backgroundTint="@color/black"
        android:text="@string/Home"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:onClick="linkMain1"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnlink5"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:onClick="linkMain7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:rippleColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="59dp"
        android:text="@string/Aviso"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewv1" />

    <LinearLayout
        android:id="@+id/txt"
        android:layout_width="415dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/beige"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>